# Webtale-Engine

./: .gitignore  AGENT.md  LICENSE  README.md
Webtale-Engine/: Cargo.toml  index.html
Webtale-Engine/assets/danmaku/: frog_jump.py
Webtale-Engine/projects/default/danmaku/: api.py  frogJump.py  frogJump.wep
Webtale-Engine/projects/default/phases/: PhaseExample.py  PhaseExample.wep  phase1.py  phase_api.py  phase_api.wep
Webtale-Engine/projects/default/properties/: enemyStatus.py  enemyStatus.wep  item.py  playerStatus.py  playerStatus.wep  properties.py
Webtale-Engine/projects/default/tachie/: froggit.py
Webtale-Engine/projects/理想のスクリプトの形式/: sampleDanmaku.py  sampleEnemy1.py  samplePhase1.py  samplePropaties.py  sampleTachie_Enemy1.py  sampleText_Enemy1.py
Webtale-Engine/src/: components.rs  constants.rs  main.rs  python_scripts.rs  python_utils.rs  resources.rs
Webtale-Engine/src/systems/: combat.rs  editor.rs  input.rs  mod.rs  phase.rs  player.rs  setup.rs  ui.rs
Webtale-Engine/src/systems/combat/: attack.rs  bullet.rs  effects.rs  flow.rs  gameOver.rs  game_over.rs  mod.rs
