[package]
name = "Webtale-Engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
bevy_egui = "0.31"
rand = "0.8"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
uuid = { version = "1.18", features = ["v4", "js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
rustpython-vm = { version = "0.3", features = ["threading"] }
rustpython-stdlib = { version = "0.3", features = ["threading"] }
rustpython-pylib = { version = "0.3", features = ["freeze-stdlib"] }
evalexpr = "11.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
